--- a/css/main.css
+++ b/css/main.css
@@ -12,5 +12,6 @@
   font-size: 20px;
   letter-spacing: -1px;
   line-height: 1;
-  margin-bottom: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
