--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: This is just a placeholder post
 ---
 
-<h1>{{ post.title }}</h1>
-
-<p>
-  {{ post.date | date: "%B %-d, %Y" }}
-</p>
-
-{{ content }}
+<div class="post">
+  <header class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+  </header>
+  <article class="post-content">
+    {{ content }}
+  </article>
+</div>
