--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,11 @@ layout: default
 ---
 
 <div class="post">
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
-  <article class="post-content">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <div class="post-date">
+    {{ page.date | date: "%B %-d, %Y" }}
+  </div>
+  <div class="post-content">
     {{ content }}
-  </article>
+  </div>
 </div>
