Updated global style rules and blog post layout template

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,3 +20,12 @@
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
+.post-header .post-date {
+  display: block;
+  font-size: 15px;
+  color: #818181;
+  margin: 0 0 30px;
+}
+
+.post-content { margin: 0 0 30px; }
