--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,11 @@ layout: default
 ---
 
 <div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <div class="post-date">
-    {{ page.date | date: "%B %-d, %Y" }}
+  <div class="post-header">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <div class="post-date">
+      {{ page.date | date: "%B %-d, %Y" }}
+    </div>
   </div>
   <div class="post-content">
     {{ content }}
